# docs-mcp

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY_INTEGRATION.md  CLAUDE.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_REPORT.md  FIGMA_ENHANCED_SOLUTION.md  FIGMA_TIMEOUT_FIXES.md  Makefile  PROJECT_CLEANUP_PLAN.md  README.md  RETRY_FUNCTIONALITY.md  codecov.yml  comprehensive_accessibility_populate.py  convert_figma_html.py  debug_figma.py  demo_search.py  direct_populate_accessibility.py  docs-mcp  extract_figma_file.py  extract_figma_json.py  extract_figma_plugin.py  extract_mdn_css.py  ingest_documentation.py  populate_accessibility_patterns.py  pyproject.toml  python_docs_scraper.py  quick_search.py  requirements-dev.txt  requirements.txt  run_comprehensive_populate.sh  run_ingestion.sh  run_populate.sh  run_search.py  run_server.sh  run_viewer.py  server.py  test_figma_plugin_integration.py  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage.yml  pr-checks.yml  release.yml  test.yml
.serena/memories/: python_docs_integration_for_code_review.md
docs/: ADDING_NEW_SOURCES.md  CLAUDE_ACCESSIBILITY_INSTRUCTIONS.md
docs_ingestion/: base.py  spa_base.py
docs_ingestion/adapters/: __init__.py  fastapi_docs.py  figma_docs.py  figma_file_docs.py  figma_json_docs.py  figma_screenshot_docs.py  mdn_css_docs.py  python_docs.py  react_docs.py  swiftui_docs.py  tailwind_docs.py
scripts/: __main__.py  analyze_collection.py  extract_figma_file.py  extract_figma_json.py  extract_figma_plugin.py  extract_mdn_css.py  ingest_documentation.py
src/docs_mcp/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  server.py
src/docs_mcp/ingestion/: __init__.py  base.py  spa_base.py
src/docs_mcp/ingestion/adapters/: __init__.py  fastapi_docs.py  figma_api_direct.py  figma_docs.py  figma_file_docs.py  figma_json_docs.py  figma_plugin_docs.py  figma_screenshot_docs.py  mdn_css_docs.py  python_docs.py  react_docs.py  swiftui_docs.py  tailwind_docs.py
tests/: __init__.py  __main__.py  test_basic.py  test_cli.py  test_cli_functionality.py  test_configuration.py  test_core_functions.py  test_main_module.py  test_server.py  test_server_functionality.py  test_server_initialization.py  test_server_startup.py  test_tool_registration.py
tests/integration/: __init__.py  test_figma_integration.py  test_figma_plugin_integration.py  test_mcp_server.py  test_mdn_css_integration.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_functionality.py  test_server.py  test_spa_adapters.py
